# apis-instance-tibschol-dev

./: README.md  manage.py  pyproject.toml
apis_ontology/: filters.py  models.py  tables.py
apis_ontology/management/commands/: transfer_relations.py  update_zotero_data.py
apis_ontology/migrations/: 0031_zoteroentry.py  0032_alter_zoteroentry_year.py  0033_instancecopiedwrittendownatplace_and_more.py  0034_alter_instancecopiedwrittendownatplace_end_date_and_more.py  0035_alter_instance_zotero_ref.py  0036_personstudentofperson_subject_of_teaching.py  0037_worktaughtatplace.py  0038_persontranslatorofwork.py  0039_persondirectpredecessorinlineageofperson_subject_of_teaching_and_more.py  0040_personannotatorofwork.py
apis_ontology/settings/: server_settings.py
apis_ontology/static/: relations.css
apis_ontology/templates/: base.html
apis_ontology/templates/apis_entities/: edit_generic.html
apis_ontology/templates/apis_entities/detail_views/: detail_generic.html
apis_ontology/templates/apis_metainfo/: base.html
apis_ontology/templates/relations/: list.html
apis_ontology/templates/templatetags/: relations_links.html
apis_ontology/templatetags/: custom_filters.py  custom_relations.py
