[tool.poetry]
name = "apis-instance-tibschol-dev"
version = "0.1.0"
description = "Generic APIS project for auto devops"
authors = ["Saranya Balasubramanian <saranya.balasubramanian@oeaw.ac.at>"]
license = "MIT"
packages = [{include = "apis_ontology"}]


[tool.poetry.dependencies]
python = ">=3.11,<3.12"
django = ">=4.1,<4.2"
django-extensions = "^3.1.3"
pyzotero = "^1.5.5"
webpage = { git = "https://github.com/acdh-oeaw/apis-webpage.git",  tag = "v1.0.1" }
apis-core = { git = "https://github.com/acdh-oeaw/apis-core-rdf.git", tag = "v0.2.0" }
apis-bibsonomy = { git = "https://github.com/acdh-oeaw/apis-bibsonomy.git", branch = "main" }
tqdm = "4.65.0"
openpyxl = "3.1.2"
django-multiselectfield = "^0.1.12"
psycopg2 = "^2.9.6"
mysqlclient = "^2.0.3"
dj-database-url = "^0.5.0"
whitenoise = "^5.2.0"
sentry-sdk = "*"
django-csp = "^3.7"
django-allow-cidr = "^0.3.1"
apis-override-select2js = {git = "git@github.com:acdh-oeaw/apis-override-select2js.git", tag = "v0.1.0" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
